clean intro (again)

--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -109,46 +109,7 @@ We designed further experiments to test whether the positivity effect was due to
 
 Although the introduction of self- and other-referential processing provided evident that value-based account can not explain the good-character effect, it introduced the good-self effect, which can be explained by social-categorization explanation and an even more self-centered explanation: moral self account. Moral self view suggested that moral self if the true self [ ]. 
 
-We went further to disentangle the good-self complex: is it because the special role of good-self or because of social categorization. We designed two complementary experiments. in experiment 4a, participants only learned the association between self and other, the words "good-person", "neutral person", and "bad person" were presented as task-irrelevant stimuli, while in experiment 4b, participants learned the associations between "good-person", "neutral-person", and "bad-person", and the "self" and "other" were presented as task-irrelevant stimuli. These two experiment can be used to distinguish the "good-self" as anchor account and the "good-self-based social categorization" account. If good-self as an anchor is true, then, in both experiment, good-self will show advantage over all other stimuli, and there will be no other effects. More specifically, in experiment 4a, where only the self-relevance is task-relevant, there will be advantage for good as task-irrelevant condition than the other two self conditions, while there is no other effects; in experiment 4b, in the good condition, there will be an advantage for self as task-irrelevant condition over other as task-irrelevant condition, and no other effects. If good-self-based social categorization if true, then, the prioritization effect will depends on whether the stimuli can be categorized as the same group of good-self. More specifically, in experiment 4a, there will be good effect in self conditions, this prediction is the same as the "good-self as anchor" account, but also, it predicts a reverse good effect in other condition because good and other a conflict in terms of social-categorization, this prediction is different from the "good-self" anchor account; however, for experiment 4b, it predicts no identity effect in the good-person condition because both self and other are in the good group.
-
-
-Another key focus of this work concerns whether perceiving moral character is in fact self-serving [@ellemers_psychology_2019; @monin_dynamic_2009]. Although a rich, long-standing literature in social psychology and organizational psychology found that people are maintaining a positive self-view, especially in moral domain [@tappin_illusion_2017]. However, it is unclear how the self-serving motivation will impact the perception of moral character information. One possibility is that we may perceive others as profitable or not to us [Abele 2007], which may lead to th value-based attention bias explanation []. Another possibility is that moral character were used to distinguish between self and other, i.e., social categorization. Self-as-anchor view vs. value-based view. the former emphasize the importance of self and concerns the identity of the moral character, the later emphasize the value of positive character and threatening of negative character. 
-
-It remains unknown, then, how moral character information are processed at perceptual level, because most studies "didn't try to explain the perceptual process itself, rather, they are trying to explain the higher-order social cognitive processes that come after" [@freeman_dynamic_2011]. Therefore, it is unclear (1) what is the direction of the asymmetrical effect when processing moral character related information, i.e., positivity effect or negativity effect, (2) what are the underlying mechanisms of the effect. [possible reasons for positive bias: potential profits, social categorization, self-referential]
-
-We addressed this issue by social associative learning task, where participants first associate visual stimuli (e.g., faces) with descriptions of a person's behaviors, then perform a task that examine the differences between visual stimuli that associated with different behaviors. If ....
-
-[Challenge: operationalization of moral character in laboratory settings] 
-The scarcity of studies on perceptual process of moral character is not without reasons. When trying to study moral character's effect on information process (e.g., perception), one big challenge lies in the difficulty to operationalize the moral character. Morality is defined by context. Whether a behavior should be judged as moral or immoral depends on a number of factors such as intention of the agent, consequences of the behavior [@cushman_role_2006; @young_neural_2007]. Also, whether a behavior is moral relevant depends on cultural and social norm [@haidt_new_2007; @rai_moral_2011]. These contextual factors, when studied in laboratory settings, have to be carefully controlled and manipulated by providing verbal scenarios. These verbal information, however, do not suit most classic cognitive paradigms where stimuli are presented shortly and participants are required to make quick decisions. 
-
-To address this issue, two approaches emerged in the last decade. In the first approach, participants directly learn the moral character of another agent through observing her/his behavior or through interacting with her/him. For example, @shore_social_2013 asked participants to play a trust game with a stranger, who was represented by a face on the screen. Participants formed impression of that person through interaction and judge him/her as trustworthy or not. After getting such impression, participants then finished a attention blink task where the face of the stranger were used as stimuli. Their findings revealed that faces associated with cooperative interaction history are preferentially processed in the pre-attention stage.
-
-Another approach used indirect associative learning, where participants first associate visual stimuli (e.g., faces) with descriptions of a person's behaviors, then perform a task that examine the differences between visual stimuli that associated with different behaviors. For example, @anderson_visual_2011 associated faces with different behaviors (e.g., negative and neutral behaviors from both social and nonsocial domains) and then asked participants to perform a binocular rivalry task, where a face and a building were presented to each eye. Participants were required report the content of their vision by pressing buttons. The results revealed that faces associated negative social behaviors appeared in the visual awareness longer than faces associated with other types of behaviors [but see @stein_no_2017]. @eiserbeck_visual_2020 combined indirect associative learning with attention blink paradigm, where neutral faces were associated with sentences about neutral or negative trust behaviors. They also found that neutral faces associated with negative behavior were processed preferentially. Other studies, where the neutral faces were associated with different affective meanings, found that forming associations requires minimal behavioral information [@bliss-moreau_individual_2008; @falvello_robustness_2015; @todorov_robust_2008]. A similar approach has been used to explore the prioritization of self-related information [@Sui_2012_JEPHPP], where more abstract concepts (person labels, e.g., "self", "friend", "stranger") and simpler visual cues (geometric shapes, e.g., triangle, circle, or square) were used. This simpler shape-label associative learning task can produce robust self-prioritization effect.
-
-Both direct and indirect associative learning paradigms are consistent with the dynamic interactive model of person perception [@freeman_dynamic_2011; @freeman_chapter_2020]. The dynamic interactive model proposed that the perceived personal traits are interactively linked with behavior and sensory stimuli. By activating sensory cues, abstract person traits can be (partially) activated. The inverse process is also possible, abstract person traits can exert influence on the processing of visual cues. Based on these assumptions, associative learning tasks directly link the higher-level, abstract personal traits (moral character in our case) with low-level visual cues, creating a temporary but direct association between personal traits and visual stimuli. After creating such associations between different traits and different visual cues, we can then test the newly established trait-cue associations by different cognitive tasks and examine the instantly learned associations' influence on cognitive processing.
-
-[The current study] 
-The current study was designed to investigate the perceptual process of moral character by using the shape-label associative learning task. This paradigm has two major advantages over face-based indirect associative learning tasks. First, it only used a few number of labels that represent different moral characters instead of moral behaviors, therefore control individual differences in interpreting moral meaning of behaviors. Second, it uses non-social visual stimuli as cues, avoided the idiosyncratic features brought by using faces. Besides, the simplicity of the task allows it to be easily combined with other cognitive tasks. Using this shape-label associative learning and perpetual matching task, the current study aimed at answering two questions mentioned above: (1) whether moral character related information are prioritized, if so, what is the exact pattern; (2) what is the potential explanations for such pattern.
-
-To investigate the first issue and validate that moral character concepts activated moral character as a social cue, we designed four experiments. The first experiment directly adopted associative paradigm from @Sui_2012_JEPHPP and changed labels from "self", "friend", and "stranger" to "good-person", "neutral-person", and "bad-person". In the follow-up studies, we tested other character labels that have similar moral meaning ("kind-person", "neutral-person", and "evil-person"). In the third experiments, as in @anderson_visual_2011, we asked participants to learn associations between three different diagnostic behaviors and three different names, and then use the names as character labels for the associative learning. Finally, we also tested whether the way of presenting stimuli mattered and sequentially present labels and shapes. All of these four experiments showed a consistent results, that is, the visual cues that associated with good character were prioritized. 
-
-Although the available studies agree that social/moral information can enhance the saliency of the sensory stimuli, yet the reported direction of the effect is not consistent. For instance, there are two studies reported a negativity effect [@anderson_visual_2011; @eiserbeck_visual_2020; but see @stein_no_2017]. The underlying reasons for the prioritization was usually attributed to affective meaning of the negative behaviors, which, in essence, is a threatening effect. In contrast, there was one study reported a positivity effect, where faces associated with positive interaction history were prioritized over faces associated with neutral or negative interaction history [@shore_social_2013]. And the positivity effect was attributed to a value-based information process [@shore_social_2013]. 
-
-The direction of the effect leads to different underlying explanations. The negativity effect usually explained by the evolutionary adoptive mechanism where the threatening feature were prioritized. However, accumulating evidence supported the view that negativity effect, especially those related to affective stimuli, are prioritized because of the low-level physical features, e.g., low frequency feature in the facial expression [see a recent review, @pool_attentional_2016]. This is reflected in the pattern that threatening stimuli are prioritized in detection task, e.g., dot-probe task. In the current study, because all visual stimuli share similar physical features and we did not using detection task but matching task, therefore, it's not surprising that we didn't found a threatening effect.
-
-The positivity effect, on the other hand, appeared later in the processing stage and were attributed to its rewarding value (we limit the value-based account to rewarding value). The value based account is an appealing explanation, there were strong evidence supporting the view that positive emotional stimuli are prioritized [@pool_attentional_2016]. For example, @anderson_value-driven_2011 found that stimuli associated with higher reward could be found more easily in a visual search task. The follow-up studies confirmed that value-based prioritization if a robust effect [@anderson_neurobiology_2019]. In our experiments, the good character label "good person" may represent an indirect but positive value. The value of good others had been found in previous survey [@abele_agency_2007].
-
-When applying to social information such as moral character, both the value-based account and the threatening model ignored the social meaning of the stimuli. Increasing evidence supported the view that social meaning of visual stimuli (e.g., social groups) also impacts our information processing, including perception [@xiao_perceiving_2016; @freeman_dynamic_2011]. Social categorization theory stated that we perceiving others based on whether or not belong to "us" [@turner_rediscovering_1987]. In other words, we may view a person with good character as an in-group member, while a bad person as them [@ellemers_morality_2018]. If moral judgment is an implicit social categorization process [@descioli_side-taking_2016; @mchugh_moral_2019], and if social categorization impact our visual perception [@xiao_perceiving_2016], then we can infer the prioritization of good character may be the results of a social categorization process, i.e., we regard good person as an natural extension of the self.
-
-However, the above four experiments could not distinguish between these possibilities, because the "good-person" label was not explicit about the identity. Therefore, the label "good person" could both be rewarding and be categorized as in-group member. Previous studies using associative learning paradigm revealed that both rewarding stimuli [e.g., @Sui_2012_JEPHPP] and in-group information [@enock_overlap_2020] are prioritized.  
-
-[Distinguish two explanations by make self salient, exp3a, 3b, 6b] 
-Though both two the value-based attention and moral-based categorization accounts can explain the positivity effect found in first four experiments (i.e., prioritization of "good-person", but not "neutral person" and "bad person"), they have different prediction if the experimental design include both identity and moral valence where the valence (good, bad, and neutral) conditions can describe self or other. In this case the identity become salient and participants are less likely to spontaneously identify a good-other as the extension of self, but the value of good-person still exists. Actually, the rewarding value of good-other might be even stronger than good-self because the former indicate potential cooperation and material rewards, but the latter merely confirmed one's personal belief. This means that the social categorization theory predicts participants prioritize good-self but not good-other, while value-based attention theory predicts both are prioritized, or maybe good-other are even more prioritized. Also, as in @Hu_2020_GoodSelf, people may also only identify with good-self instead of bad self. That is, people will show a unique pattern of self-identification: only good-self is identified as "self" while all the others categories were excluded.
-
-We introduced identity (self vs. other) as an addition independent variable in exp 3a, 3b, and 6b. Now the moral valence is orthogonal to the identity. We found that (1) good-self is always faster than neutral-self and bad-self, but good-other only have weak to null advantage to neutral-other and bad-other. which mean the social categorization is self-centered. (2) good-self's advantage over good other only occur when self- and other- were in the same task. i.e. the relative advantage is competition based instead of absolute. These three experiments suggest that people more like to view the moral character stimuli as person and categorize good-self as an unique category against all others. A three-level Bayesian generalized linear mixed effect model showed that there was no effect of valence when the identity was other. This results showed that value-based attention was not likely the mechanism behind the pattern we observed in first four experiments. However, it is still unclear why good-self was prioritized. Besides the social-categorization explanation, it's also possible that good self is so unique that it is prioritized in all possible situation and therefore is not social categorization *per se*. 
-
-[what we care? valence of the self exp4a or identity of the good exp4b?] 
-We went further to disentangle the good-self complex: is it because the special role of good-self or because of social categorization. We designed two complementary experiments. in experiment 4a, participants only learned the association between self and other, the words "good-person", "neutral person", and "bad person" were presented as task-irrelevant stimuli, while in experiment 4b, participants learned the associations between "good-person", "neutral-person", and "bad-person", and the "self" and "other" were presented as task-irrelevant stimuli. These two experiment can be used to distinguish the "good-self" as anchor account and the "good-self-based social categorization" account. If good-self as an anchor is true, then, in both experiment, good-self will show advantage over all other stimuli, and there will be no other effects. More specifically, in experiment 4a, where only the self-relevance is task-relevant, there will be advantage for good as task-irrelevant condition than the other two self conditions, while there is no other effects; in experiment 4b, in the good condition, there will be an advantage for self as task-irrelevant condition over other as task-irrelevant condition, and no other effects. If good-self-based social categorization if true, then, the prioritization effect will depends on whether the stimuli can be categorized as the same group of good-self. More specifically, in experiment 4a, there will be good effect in self conditions, this prediction is the same as the "good-self as anchor" account, but also, it predicts a reverse good effect in other condition because good and other a conflict in terms of social-categorization, this prediction is different from the "good-self" anchor account; however, for experiment 4b, it predicts no identity effect in the good-person condition because both self and other are in the good group.
+We went further to test the moral-self view and the social-categorization account. We designed two complementary experiments. In experiment 4a, participants only learned the association between self and other, the words "good-person", "neutral person", and "bad person" were presented as task-irrelevant stimuli, while in experiment 4b, participants learned the associations between "good-person", "neutral-person", and "bad-person", and the "self" and "other" were presented as task-irrelevant stimuli. These two experiment can be used to distinguish the moral-self view and social categorization" account. If moral-self view is true, then, in both experiment, good-self will show advantage over all other stimuli, and there will be no other effects. More specifically, in experiment 4a, where only the self-referential processing is task-relevant, there will be advantage for good as task-irrelevant condition than when bad or neutral character as taks-irrelevant for the self conditions, while there is no other effects; in experiment 4b, in the good condition, there will be an advantage for self as task-irrelevant condition over other as task-irrelevant condition, and no other effects. If social categorization if true, then, the prioritization effect will depends on whether the stimuli can be categorized as the same group of good-self. More specifically, in experiment 4a, there will be good effect in self conditions, this prediction is the same as the moral self-view; it predicts a reverse good effect in other condition because good and other a conflict in terms of social-categorization, this prediction is different from the "good-self" anchor account; however, for experiment 4b, it predicts no identity effect in the good-person condition because both self and other are in the good group.
 
 [Good self in self-reported data] 
 As an exploration, we also collected participants' self-reported psychological distance between self and good-person, bad-person, and neutral-person, moral identity, moral self-image, and self-esteem. All these data are available [see @Liu_2020_JOPD]. We explored the correlation between self-reported distance and these questionnaires as well as the questionnaires and behavioral data. However, given that the correlation between self-reported score and behavioral data has low correlation [@dang_why_2020], we didn't expect a high correlation between these self-reported measures and the behavioral data.
