--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -28,7 +28,7 @@ authornote: |
   Authors contriubtion: HCP, JS, & KP design the study, HCP collected the data, HCP analyzed the data and drafted the manuscript. All authors read and agreed upon the current version of the manuscripts.
 
 abstract: |
- Researchers in moral psychology had long assumed that information related to bad moral character is prioritized in cognitive processing, yet the evidence is scarce. A main challenage lies in operationalizing moral character to suit cognitive tasks. Social associative learning task, where participants first associat social conceptions with neutral stimuli and then perform cognitive tasks (e.g., matching judgment), had been proved to be an effective way to study the information processing of social and affective information Here, we examined the information process of moral character using social associataive learning task. Across 9 experiments (N = 4XX, trials = XXX), we found a robust but opposite effect: shapes associated with good character were prioritized, as compared to shapes associated with neutral or bad characters. Crucially, good character effect was robust when it referred to the self but weak or non-exist when it referred to a stranger. Moreover, even when identity or moral character information became task-irrelevant, participants were still sensitive to good character: the good-self combination facilitate the process while the good-other combination slowed down the process. Together, these results suggested that good character is prioritized in social associative learning task where and this effect was due to a spontaneous self-referential processing.
+ Moral character is central to social perception and moral psychology, yet how these information is process is unclear. Both negativity effect and positivity effect are possible. Here, we examined these two possibilities using social associataive learning task, where participants first associat social conceptions with neutral stimuli and then perform cognitive tasks (e.g., matching judgment). Across 9 experiments (N = 4XX, trials = XXX), we found a robust positivity effect: shapes associated with good character were prioritized, as compared to shapes associated with neutral or bad characters. Crucially, good character effect was robust when it referred to the self but weak or non-exist when it referred to a stranger. Moreover, even when identity or moral character information became task-irrelevant, participants were still sensitive to good character: the good-self combination facilitate the process while the good-other combination slowed down the process. Together, these results suggested that good character is prioritized in social associative learning task and this effect was due a spontaneous self-referential processing.
   
  <!-- https://tinyurl.com/ybremelq -->
   
@@ -88,28 +88,22 @@ Ideas:
 little value in relying on people's self-reported moral principles or moral ideals to predict their real life behaviors, "paradox of morality" (Ellemers, 2019);
 moral associative learning as an stronger predictor??
 -->
-
-social vision --> moral vision --> two competing explanations (value-based vs. true-self-based) --> true-self is not perspective free but self-centered.
-
-[Huang & Sherman 2018, attention theory: attend to differentiating information to maximize category learning]
-[Unkelbach et al., 2020, Similarity theory of positivity and negativity bias, a very comprehensive review of positivity effect and negativity effect in social cognition. Especially interesting is that, with extensive studies on the negative primacy of negative information (diagnositicity), positive effect is robust and consistent in associative potential and processing speed. as early as in 1966, researcher found that positive word pairs were better learned, and in 2011, researcher found that IAT effect was driven by positivity effect. Interestingly, in our task, we basically have two processes: associative learning, and classification (matching judgment), which means that our results should be not a surprise if we considering these factors.
-
-[Morality is central to social life, moral character is the central of morality] **People experience a substantial amount of moral events in everyday life [e.g., @hofmann_morality_2014] and judging the moral character of people is indispensable part of these events**. Whether we are the agent, target, or a third party of a moral event, we always judge moral behaviors as "right" or "wrong", and by doing so, we judge people as "good" or "bad" [@uhlmann_person-centered_2015]. Moral character is so important in social life that it is a basic dimension in our social evaluation [@goodwin_moral_2014; @goodwin_moral_2015] and that a substantial part of people's conversation are gossiping others' moral character (or, reputation) [e.g., @dunbar_gossip_2004]. These moral character information may help us to evaluate our in-group members and distinguish out-group members [@ellemers_morality_2018]. The importance of moral character may have been internalized to individuals' self-concept and the good moral self is deemed as the core of identity [e.g., @strohminger_true_2017]. 
+[Morality is central to social life, moral character is the central of morality] **People experience a substantial amount of moral events in everyday life [e.g., @hofmann_morality_2014] and judging the moral character of people is indispensable part of these events**. Whether we are the agent, target, or a third party of a moral event, we always judge moral behaviors as "right" or "wrong", and by doing so, we judge people as "good" or "bad" [@uhlmann_person-centered_2015]. Moral character is so important in social life that it is a basic dimension in our social evaluation [@goodwin_moral_2014; @goodwin_moral_2015] and that a substantial part of people's conversation are gossiping others' moral character (or, reputation) [e.g., @dunbar_gossip_2004]. These moral character information may help us to evaluate our in-group members and distinguish out-group members [@ellemers_morality_2018]. Crucially, moral character central for self-concept and identity too. A positive moral character is viewed as the core feature of identity [e.g., @strohminger_true_2017]. 
 
 [Two possibilities about moral character]
-Given the importance of moral character and limited cognitive resources to process all the information in a social world, will people deferentially process the information related to moral character and prioritize moral character information? One possibility is that 'bad' character related information are prioritized [e.g., @baumeister_bad_2001; @pratto_automatic_1991]. This possibility is consistent with early studies in impression formation which found that negative traits are weighted more in overall impression [@anderson_averaging_1965; @fiske_attention_1980; @skowronski_social_1987]. This idea also seemed to consistent with the more general idea that "bad is stronger than good" [@baumeister_bad_2001]. A few studies provided evidence that negative moral character are prioritized in pre-attentive process. For example, @anderson_visual_2011 associated faces with different behaviors (e.g., negative and neutral behaviors from both social and nonsocial domains) and then asked participants to perform a binocular rivalry task, where a face and a building were presented to each eye. Participants were required report the content of their vision by pressing buttons. The results revealed that faces associated negative social behaviors appeared in the visual awareness longer than faces associated with other types of behaviors [but see @stein_no_2017]. @eiserbeck_visual_2020 combined indirect associative learning with attention blink paradigm, where neutral faces were associated with sentences about neutral or negative trust behaviors. They also found that neutral faces associated with negative behavior were processed preferentially. 
+Given the importance of moral character and limited cognitive resources to process all the information in a social world, will people deferentially process the information related to moral character and prioritize information with certain moral character? One possibility is that 'bad' character are prioritized. This possibility is consistent with early studies in impression formation which found that negative traits are weighted more in overall impression [@anderson_averaging_1965; @fiske_attention_1980; @skowronski_social_1987]. This idea also seemed to consistent with the more general idea that "bad is stronger than good" [@baumeister_bad_2001; @pratto_automatic_1991]. A few studies provided evidence for this possibility. For example, @anderson_visual_2011 asked participants to associate faces with different behaviors (e.g., negative and neutral behaviors from both social and nonsocial domains) and then perform a binocular rivalry task, where a face and a building were presented to each eye. Participants were required report the content of their visual awareness by pressing buttons. The results revealed that faces associated negative social behaviors dominated participants' visual awareness longer than faces associated with other types of behaviors [but see @stein_no_2017]. Similarly, @eiserbeck_visual_2020 combined  associative learning with attention blink paradigm, where neutral faces were associated with sentences about neutral or negative trust behaviors. They also found that neutral faces associated with negative behavior were processed preferentially. 
 
-It is also possible, however, that the negativity effect in impression formation may not be able to generalized to perceptual process, instead, positive moral characters are prioritized [see recent reviews, @pool_attentional_2016; @unkelbach_chapter_2020]. @unkelbach_chapter_2020 pointed out that bad is not necessarily stronger than good in all aspects of information processing. Good is stronger than bad in some paradigms. For example, when participants are asked to classify words as good or bad, positive trait words are classified faster than negative words [@bargh_generality_1992]. Similarly, in a lexical decision task, participants judge positive words faster than negative words [@unkelbach_good_2010]. Also, @anisfeld_when_1966 found that positive words are easier to associate with nonsense word-like strings, and this advantage in associative potential also appeared in implicit association test (IAT) [@anselmi_positive_2011]. These early study was echoed by a recent study where faces with positive interaction in a trust game were prioritized in pre-attentive process [@shore_social_2013].
+It is also possible, however, that the negativity effect in impression formation may not be able to generalized to perceptual process, instead, positive moral characters are prioritized [see recent reviews, @pool_attentional_2016; @unkelbach_chapter_2020]. @unkelbach_chapter_2020 pointed out that bad is not necessarily stronger than good in all aspects of information processing. Sometimes, good is stronger than bad. For example, when participants are asked to classify words as good or bad, positive trait words are classified faster than negative words [@bargh_generality_1992]. Similarly, in a lexical decision task, participants judge positive words faster than negative words [@unkelbach_good_2010]. Also, @anisfeld_when_1966 found that positive words are easier to associate with nonsense word-like strings, and this advantage in associative potential also appeared in implicit association test (IAT) [@anselmi_positive_2011]. Direct evidence for positivity effect of moral character also exist: @shore_social_2013 found that faces with positive interaction in a trust game were prioritized in pre-attentive process.
 
-Here, we attempted to distinguish the two possibilities by a social associative learning task in which physical features had minimal influences — participants performed a perceptual matching task after associated different moral characters (good, neutral, and bad) with different geometric shapes. If there is a positive bias, there should be an advantage for shapes associated with good character over shapes associated with neutral or bad shapes. If there is a negative bias, the advantage should be occur on shapes associated with bad characters. The first four experiments and two additional follow-up experiments provided strong evidence for good character effect in the current paradigm.
+Here, we attempted to distinguish these two possibilities by a social associative learning task in which physical features had minimal influences — participants performed a perceptual matching task after associated different moral characters (good, neutral, and bad) with different geometric shapes. If there is a positivity effect, there should be an advantage for shapes associated with good character over shapes associated with neutral or bad shapes. If there is a negativity effect, the advantage should be occur on shapes associated with bad characters. The first four experiments and two additional follow-up experiments provided strong evidence for good character effect in the current paradigm.
 
-The positivity effect consistent with previous studies where positivity effect of social trait words were found [@anselmi_positive_2011; @bargh_generality_1992; @unkelbach_good_2010]. However, the current positivity results cannot be explained by the similarity hypothesis [@unkelbach_chapter_2020] because we only used three stimuli. There are two possibility explanations. The first one is the value-based attention account, which suggests that stimuli that are valuable to us are prioritized [@anderson_neurobiology_2019]. In our experiments, the good character label "good person" may represent an indirect but valuable stimuli because, in social life, a good other is usually more valuable than an bad other [@abele_agency_2007]. Another possibility is derived from social categorization theory, which suggested that we automatically categorize others as in-group or out-group []. Moral character is an important criterion for social categorization []. However, the above four experiments could not distinguish between these possibilities, because the "good-person" label was not explicit about the identity. Therefore, the label "good person" could both be rewarding and be categorized as in-group member. Previous studies using associative learning paradigm revealed that both rewarding stimuli [e.g., @Sui_2012_JEPHPP] and in-group information [@enock_overlap_2020] are prioritized.  
+The positivity effect consistent with previous studies where positivity effect of social trait words were found [@anselmi_positive_2011; @bargh_generality_1992; @unkelbach_good_2010]. However, the effect could not be explained by the similarity hypothesis [@unkelbach_chapter_2020] because we only used three stimuli. There are two possibility explanations. The first one is the value-based attention account, which suggests that stimuli that are valuable to us are prioritized [@anderson_neurobiology_2019]. In our experiments, the good character label "good person" may represent an indirect but valuable stimuli because, in social life, a good other is usually more valuable than an bad other [@abele_agency_2007]. Another possibility is derived from social categorization theory, which suggested that we automatically categorize others as in-group or out-group [@turner_rediscovering_1987]. Moral character is an important criterion for social categorization [@mchugh_moral_2019; @descioli_side_taking_2016]. However, the above four experiments could not distinguish between these two possibilities, because "good person" could both be rewarding and be categorized as in-group member. Given that both rewarding stimuli [e.g., @Sui_2012_JEPHPP] and in-group information [@enock_overlap_2020] are prioritized when using social associative learning paradigm, we further tested these two possibilities in new experiments.
 
-We designed further experiments to test whether the positivity effect was due to potential value or social categorization. We introduced identity (self vs. other) as an addition independent variable in exp 3a, 3b, and 6b. Now the moral valence is orthogonal to the identity. TIn this case the identity become salient and participants are less likely to spontaneously identify a good-other as the extension of self, but the value of good-person still exists. If the positiivty effect was driven by social categorization theory, then participants prioritize good-self but not good-other. If the value-based attention theory is true, then, both good-self and good-other are prioritized, or maybe good-other are even more prioritized. Results from three experiments revealed that (1) good-self is always faster than neutral-self and bad-self, but good-other only have weak to null advantage to neutral-other and bad-other; (2) good-self's advantage over good other only occur when self- and other- were in the same task. i.e. the relative advantage is competition based instead of absolute. These three experiments suggest that people more like to view the moral character stimuli as person and categorize good-self as an unique category against all others. A three-level Bayesian generalized linear mixed effect model showed that there was no effect of valence when the identity was other. This results showed that value-based attention was not likely the mechanism behind the pattern we observed in first four experiments. 
+To distinguish the value-based account and the social categorization explanations, we introduced the identity (self- vs. other-referential) of moral character as an addition independent variable in exp 3a, 3b, and 6b. Now moral valence is orthogonal to the identity. In this case, the identity of moral character information become salient and participants are less likely to spontaneously categorize a good-other as an extension of self, but the value of good-person still exists. If the positivity effect was driven by social categorization theory, then participants prioritize good-self but not good-other. If the value-based attention theory is true, then, both good-self and good-other are prioritized, or maybe good-other are even more prioritized. 
 
-Although the introduction of self- and other-referential processing provided evident that value-based account can not explain the good-character effect, it introduced the good-self effect, which can be explained by social-categorization explanation and an even more self-centered explanation: moral self account. Moral self view suggested that moral self if the true self [ ]. 
+Although the introduction of self- and other-referential processing provided evident that value-based account can not explain the good-character effect, it might introduce the good-self effect, i.e., the good-self is prioritized over all the other stimuli. This effect, if true, may suggest underlying mechanisms other than social-categorization. For example, the moral true self account. Moral true self view suggested that moral self if the true self [@strohminger_true_2017]. Therefore, even good-self can be viewed as categorized to in-group, it can also be viewed as the core of the self and it is the anchor of all the other effects.
 
-We went further to test the moral-self view and the social-categorization account. We designed two complementary experiments. In experiment 4a, participants only learned the association between self and other, the words "good-person", "neutral person", and "bad person" were presented as task-irrelevant stimuli, while in experiment 4b, participants learned the associations between "good-person", "neutral-person", and "bad-person", and the "self" and "other" were presented as task-irrelevant stimuli. These two experiment can be used to distinguish the moral-self view and social categorization" account. If moral-self view is true, then, in both experiment, good-self will show advantage over all other stimuli, and there will be no other effects. More specifically, in experiment 4a, where only the self-referential processing is task-relevant, there will be advantage for good as task-irrelevant condition than when bad or neutral character as taks-irrelevant for the self conditions, while there is no other effects; in experiment 4b, in the good condition, there will be an advantage for self as task-irrelevant condition over other as task-irrelevant condition, and no other effects. If social categorization if true, then, the prioritization effect will depends on whether the stimuli can be categorized as the same group of good-self. More specifically, in experiment 4a, there will be good effect in self conditions, this prediction is the same as the moral self-view; it predicts a reverse good effect in other condition because good and other a conflict in terms of social-categorization, this prediction is different from the "good-self" anchor account; however, for experiment 4b, it predicts no identity effect in the good-person condition because both self and other are in the good group.
+To test the moral true self view and the social-categorization account, we designed two complementary experiments. In experiment 4a, participants only learned the association between self and other, the words "good-person", "neutral person", and "bad person" were presented as task-irrelevant stimuli, while in experiment 4b, participants learned the associations between "good-person", "neutral-person", and "bad-person", and the "self" and "other" were presented as task-irrelevant stimuli. These two experiments can be used to distinguish the moral-self view and social categorization" account. If moral-self view is true, then, in both experiments, good-self will show advantage over all other stimuli, and there will be no other effects. More specifically, in experiment 4a, where only the self-referential processing is task-relevant, there will be advantage for good as task-irrelevant condition than when bad or neutral character as task-irrelevant for the self conditions, while there is no other effects; in experiment 4b, in the good condition, there will be an advantage for self as task-irrelevant condition over other as task-irrelevant condition, and no other effects. If social categorization is true, then, the prioritization effect will depends on whether the stimuli can be categorized as the same group of good-self. More specifically, in experiment 4a, there will be good effect in self conditions, this prediction is the same as the moral self-view; it predicts a reverse good effect in other condition because good and other a conflict in terms of social-categorization, this prediction is different from the "good-self" anchor account; however, for experiment 4b, it predicts no identity effect in the good-person condition because both self and other are in the good group.
 
 [Good self in self-reported data] 
 As an exploration, we also collected participants' self-reported psychological distance between self and good-person, bad-person, and neutral-person, moral identity, moral self-image, and self-esteem. All these data are available [see @Liu_2020_JOPD]. We explored the correlation between self-reported distance and these questionnaires as well as the questionnaires and behavioral data. However, given that the correlation between self-reported score and behavioral data has low correlation [@dang_why_2020], we didn't expect a high correlation between these self-reported measures and the behavioral data.
@@ -139,7 +133,7 @@ The perceptual decision-making will show certain pattern under certain task dema
 in experiment 4a and 4b, we didn't have a baseline condition where there is no word inside the shape? -->
 
 # Disclosures
-We reported all the measurements, analyses, and results in all the experiments in the current study. Participants whose overall accuracy lower than 60% were excluded from analysis. Also, the accurate responses with less than 200ms reaction times were excluded from the analysis.  
+We reported all the measurements, analyses, and results in all the experiments in the current study. Participants whose overall accuracy lower than 60% were excluded from analysis. Also, the accurate responses with less than 200ms reaction times were excluded from the analysis. These excluded data can be found in the shared raw data files.
 
 All the experiments reported were not pre-registered. Most experiments (1a ~ 4b, except experiment 3b) reported in the current study were first finished between 2013 to 2016 in Tsinghua University, Beijing, China. Participants in these experiments were recruited in the local community. To increase the sample size of experiments to 50 or more [@Simmons_2013_life], we recruited additional participants in Wenzhou University, Wenzhou, China in 2017 for experiment 1a, 1b, 4a, and 4b. Experiment 3b was finished in Wenzhou University in 2017. To have a better estimation of the effect size, we included the data from unreported data in our three-level models (experiment 5, 6a, 6b) (See Table S1 for overview of these experiments). 
 
@@ -2603,22 +2597,16 @@ Correlation analysis showed that most psychological distance ratings were positi
 See Figure \@ref(fig:plot-person-dist) and Figure \@ref(fig:plot-person-dist-net).
 
 # Discussion
-We human inevitably view others and ourselves in a moral lens. Previous studies assume that the principle "bad is stronger than good" also applies to moral character in information processing and assumed that bad moral character are prioritized. Across ten experiments, we studied the processing of moral character using a social associative learning task, we examined the effect of moral character on a matching task and the mechanism underlying the effect. We find evidence that good character are prioritized in the matching task, regardless of the label used for moral characters or the way stimuli are presented. We documented that this positivity effect was driven by a self-referential processing: prioritization only occur when moral characters are self-referential but not stranger-referential. The prioritization effect only occur when self-referential and good character are combined, whether task-relevant or not. When good character were combined with other, the information process was slowed down. 
+We human inevitably view others and ourselves in a moral lens. Previous studies assume that the principle "bad is stronger than good" also applies to moral character in information processing and assumed that bad moral character are prioritized. Across nine experiments, we studied the processing of moral character using a social associative learning task, we examined the effect of moral character on a matching task and the mechanism underlying the effect. We find evidence that good character are prioritized in the matching task, regardless of the label used for moral characters or the way stimuli are presented. We documented that this positivity effect was driven by a self-referential processing: prioritization only occur when moral characters are self-referential but not stranger-referential. The prioritization effect only occur when self-referential and good character are combined, whether task-relevant or not. When good character were combined with other, the information process was slowed down. 
 
-Our studies contribute to the person perception literature in XXX ways. First, 
+Our studies contribute to the person perception literature in XXX ways. First, we found the negativity effect in impression formation is not applicable in a perceptual-matching task. 
+
+Second, we found that self-referential process is important in the prioritization of good character.
+
+Third, we found that either moral true self view or social-categorization view alone could not explain the results. Combine the moral-self-based categorization may help explaining the findings here.
 
 
-Second,
-
-Third,
-
-[direct evidence for moral character in perception]
-
-[Value-based attention?]
-
-[Good-self effect]
-
-[Discrepancy between self-reported distance and the reaction time, future studies]
+Moreover, we found discrepancy between self-reported distance and the reaction time, suggesting that self-reported the results  may be ....
 
 
 # References
