discussion first version

--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -457,15 +457,21 @@ See Figure \ref{fig:plot-person-dist} and Figure \ref{fig:plot-person-dist-net}.
 \hypertarget{discussion}{%
 \section{Discussion}\label{discussion}}
 
-We human inevitably view others and ourselves in a moral lens. Previous studies assume that the principle ``bad is stronger than good'' also applies to moral character in information processing and assumed that bad moral character are prioritized. Across nine experiments, we studied the processing of moral character using a social associative learning task, we examined the effect of moral character on a matching task and the mechanism underlying the effect. We find evidence that good character are prioritized in the matching task, regardless of the label used for moral characters or the way stimuli are presented. We documented that this positivity effect was driven by a self-referential processing: prioritization only occur when moral characters are self-referential but not stranger-referential. The prioritization effect only occur when self-referential and good character are combined, whether task-relevant or not. When good character were combined with other, the information process was slowed down.
+We human inevitably view other people and ourselves in a moral lens. Yes how this moral lens will change our information processes is unknown. Across nine experiments, we studied the processing of moral character using a social associative learning task, we examined the effect of moral character on a matching task and explored the mechanisms underlying the effect. We found robust evidence that good character are prioritized in the matching task, regardless of the label used for moral characters or the way stimuli are presented. We documented that this positivity effect was driven by a self-referential processing: prioritization only occur when moral characters are self-referential but not other-referential. The prioritization effect occur when self and good character are combined, whether task-relevant or not. When good character were other-referential, even implicitly, the information process might be slowed down. Together, our findings highlight the importance of the self-referential in perceiving positive moral character. These findings contributed to a growing literature on the social nature of perception (Freeman, Stolier, \& Brooks, 2020; Xiao, Coppin, \& Bavel, 2016) by supporting the idea that people can prioritized not just physically salient, or affective stimuli, but also socially salient stimuli, i.e., instantly acquired moral information.
 
-Our studies contribute to the person perception literature in XXX ways. First, we found the negativity effect in impression formation is not applicable in a perceptual-matching task.
+First, we examined the perceptual process of moral character to understand how moral information are processed. Prior research has demonstrated that bad moral behavior is stronger in impression formation {[}{]} and bad moral character are attended quicker than neutral moral character {[}{]}. The empirical studies on the moral character often focus on self-reported data rather than behavioral response. In this paper, we examined the perceptual processes of moral character. In doing so, we shifted the focus from consequences of information process of moral character to the information process itself, thus broaden the scope of the existing research.
 
-Second, we found that self-referential process is important in the prioritization of good character.
+Second, perceptual processing is the upstream of our information that can help us understand priority of different information. We thus contributed to the research on moral character by demonstrating that information related to good character in general, and good moral self in specific, is prioritized. Specifically, we found that instantly learned moral character information can change the information process of neutral, non-social information. Presumably this prioritization occurs because good moral character and moral self is central to one's social life. Research has found that moral self is essential for one's identity and people has stronger self-enhancement effect in moral domain than in other social domain. This positivity effect is opposite to negativity effect in impression formation, suggesting that impression formation and perceptual-matching may involved different information process mechanisms. This positivity effect, though surprising at first, is well supported by previous studies. Positivity effect had been found in associative learning {[}{]}, lexical decision-making {[}{]}, and IAT {[}{]}. A common feature of these paradigms is that decision-making occurs at relative later stage of the information processing in perception, instead of early sensory processing stage. In the current paradigm, participants made a matching judgment, which was only possible after participants formed a perception of both the shape and the label and retrieve the association between them. ample evidence supported the idea that positive stimuli have advantage at the later stage of perception (Pool, Brosch, Delplanque, \& Sander, 2016). The task used in the current study may explain why the result are different from previous studies such as E. Anderson, Siegel, Bliss-Moreau, and Barrett (2011) and Eiserbeck and Abdel Rahman (2020), where the early processing stage were targeted by attention blink paradigm.
 
-Third, we found that either moral true self view or social-categorization view alone could not explain the results. Combine the moral-self-based categorization may help explaining the findings here.
+The absence of negativiity effect may also caused by the fact that the bad character here is an abstract concept that may not bring concrete threatening to the participants, therefore it is not as strong as previous studies used emotional stimuli that has higher arousal. Besides, recent study found that when the moral violation is not life-threatening, the impression of bad character is volatile in the social context {[}{]}.
 
-Moreover, we found discrepancy between self-reported distance and the reaction time, suggesting that self-reported the results may be \ldots.
+Third, knowing that good character and moral-self is prioritized is not sufficient; we need to know why this prioritization occurs. Our results indicate that the good character prioritization is driven by spontaneous self-referential processing. Also, these results revealed that either a general-self based social categorization or moral self as anchor view alone can explain the results. Instead, we proposed that moral-self based social categorization can better account for the results, especially the results where either identity or moral character information were task-irrelevant. These results echo prior research on moral-self view, suggesting that moral-self as true self is not only at self-report level but also at perceptual level. Further, our results showed that we not only regard moral self as the true-self, but also seek to categorize information based on moral-self: when good-other creates an ambiguous situation, the responses was slowed down in perceptual processing.
+
+Fourth, we find that behavioral data and self-reported data doesn't congruent. When asked to rate the distance between self and good person, the distance is similar to the distance between self and neutral person. However, the distance between self and bad person is the longest, even longer than the distance between good and bad. These results might be caused by the social desirability effect that often occurs in self-reporting. However, we didn't not find strong evidence for the correlation between behavioral results and the self-reported person distance.
+
+{[}Memory or perception.{]} One would argue that the effect here may represent a memory effect instead of perpetual effect \emph{per se}. (1) how to define perception is debated, while some researchers included memory components in perception, others do not. Here, we are more on the broader view of perception. (2), the memory effect view predict that the effect will be eliminated after participants became familiar with the association. We did supplementary analysis where we divided the whole experiment into three different stage: early, middle, and later, and then compared the results pattern of early and later stages. These results revealed null effect of training. These additional analysis suggested that memory effect may exist, but in a sense that they reflected a long-term, stable pattern of different valenced moral character, instead of a short-term, associative learning induced effect.
+
+{[}free association from small world of words{]}
 
 \hypertarget{references}{%
 \section{References}\label{references}}
@@ -533,6 +539,9 @@ Fiske, S. T. (1980). Attention and weight in person perception: The impact of ne
 \leavevmode\hypertarget{ref-fiske_attention_1980}{}%
 Fiske, S. T. (1980). Attention and weight in person perception: The impact of negative and extreme behavior. \emph{Journal of Personality and Social Psychology}, \emph{38}(6), 889--906. \url{https://doi.org/10.1037/0022-3514.38.6.889}
 
+\leavevmode\hypertarget{ref-freeman_chapter_2020}{}%
+Freeman, J. B., Stolier, R. M., \& Brooks, J. A. (2020). Chapter five - dynamic interactive theory as a domain-general account of social perception. In B. Gawronski (Ed.), \emph{Advances in experimental social psychology} (Vol. 61, pp. 237--287). Academic Press. \url{https://doi.org/10.1016/bs.aesp.2019.09.005}
+
 \leavevmode\hypertarget{ref-Goh_2016_mini}{}%
 Goh, J. X., Hall, J. A., \& Rosenthal, R. (2016). Mini meta-analysis of your own studies: Some arguments on why and a primer on how {[}Journal Article{]}. \emph{Social and Personality Psychology Compass}, \emph{10}(10), 535--549. \url{https://doi.org/10.1111/spc3.12267}
 
@@ -595,6 +604,9 @@ Unkelbach, C., Alves, H., \& Koch, A. (2020). Chapter three - negativity bias, p
 
 \leavevmode\hypertarget{ref-unkelbach_good_2010}{}%
 Unkelbach, C., Hippel, W. von, Forgas, J. P., Robinson, M. D., Shakarchi, R. J., \& Hawkins, C. (2010). Good things come easy: Subjective exposure frequency and the faster processing of positive information. \emph{Social Cognition}, \emph{28}(4), 538--555. \url{https://doi.org/10.1521/soco.2010.28.4.538}
+
+\leavevmode\hypertarget{ref-xiao_perceiving_2016}{}%
+Xiao, Y. J., Coppin, G., \& Bavel, J. J. V. (2016). Perceiving the world through group-colored glasses: A perceptual model of intergroup relations. \emph{Psychological Inquiry}, \emph{27}(4), 255--274. \url{https://doi.org/10.1080/1047840X.2016.1199221}
 
 \end{CSLReferences}
 
